--- a/Homework/Calendar/src/css.css
+++ b/Homework/Calendar/src/css.css
@@ -220,9 +220,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   color: #666;
 }
 
@@ -231,11 +228,26 @@ body {
 }
 
 .calendar.line .contentDates li .left .availablePosition {
+  position: relative;
+  margin-left: 15px;
   font-size: 14px;
 }
 
 .calendar.line .contentDates li .left .availablePosition span:nth-child(1) {
   margin-right: 30px;
+}
+
+.calendar.line .contentDates li .left .availablePosition .guaranteedLabel {
+  background-color: #66bb3c;
+  color: white;
+  padding: 3px 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.calendar.line .contentDates li .left .availablePosition .guaranteedLabel > i {
+  margin-right: 5px;
 }
 
 .calendar.line .contentDates li .right {
