--- a/Homework/Calendar/src/css.scss
+++ b/Homework/Calendar/src/css.scss
@@ -195,19 +195,32 @@ body {
                 }
                 .left {
                     display: flex;
-                    justify-content: center;
                     color: #666;
                     .day {
                         text-align: center;
                     }
                     .availablePosition {
+                        position: relative;
+                        margin-left: 15px;
                         font-size: 14px;
                         span:nth-child(1) {
                             margin-right: 30px;
                         }
+                        .guaranteedLabel {
+                            background-color: #66bb3c;
+                            color: white;
+                            padding: 3px 10px;
+                            position: absolute;
+                            left: 0;
+                            bottom: 0;
+                            > i {
+                                margin-right: 5px;
+                            }
+                        }
                     }
                 }
                 .right {
+                    // outline: 1px solid red;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
